--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     <body>
 		<div class="main">
 			<div class="formgroup">
-				<form action="http://solecarts.oo.gd/monitor/debug.php" method="post" enctype="multipart/form-data">
+				<form action="https://parse-api-fileuploader.herokuapp.com/php/upload.php" method="post" enctype="multipart/form-data">
 					Select MP3 file to upload:
 					<input type="file" name="fileToUpload" id="fileToUpload"/>
 					<input type="text" name="nameOfFile" id="nameOfFile" placeholder="Name"/>
